--- a/_config.yml
+++ b/_config.yml
@@ -12,6 +12,8 @@ links:
   - name:         Blog
     url:          http://jennifercooper.ca
     external:     true
+  - name:         Hire Me
+    url:          /hireme
   - name:         Email
     url:          mailto:cooper.jennl@gmail.com
     external:     true
