--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ url:              jennifercooper.ca
 signoff:          # Your name.
 disqus_shortname: # disqus comment thread for post header options. ( leave blank if unwanted. )
 facebook_appid:   # appid for like button, remove from /_includes/share.html if unwanted.
-google_analytics: # set tracking, remove from /javascripts/basic.js if unwanted.
+google_analytics: UA-35173889-1
 
 links:
   - name:         About
